--- a/plugin_matrix.html
+++ b/plugin_matrix.html
@@ -482,19 +482,25 @@ is limited.</p>
 <td>&#8211;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>rtve</td>
+<tr class="row-odd"><td>piczel</td>
+<td>piczel.tv</td>
+<td>Yes</td>
+<td>&#8211;</td>
+<td>&nbsp;</td>
+</tr>
+<tr class="row-even"><td>rtve</td>
 <td>rtve.es</td>
 <td>Yes</td>
 <td>No</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>ruv</td>
+<tr class="row-odd"><td>ruv</td>
 <td>ruv.is</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>Streams may be geo-restricted to Iceland.</td>
 </tr>
-<tr class="row-odd"><td>sbsdiscovery</td>
+<tr class="row-even"><td>sbsdiscovery</td>
 <td><ul class="first last simple">
 <li>kanal5play.se</li>
 <li>kanal9play.se</li>
@@ -505,50 +511,50 @@ is limited.</p>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>seemeplay</td>
+<tr class="row-odd"><td>seemeplay</td>
 <td>seemeplay.ru</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>speedrunslive</td>
+<tr class="row-even"><td>speedrunslive</td>
 <td>speedrunslive.com</td>
 <td>Yes</td>
 <td>&#8211;</td>
 <td>URL forwarder to Twitch channels.</td>
 </tr>
-<tr class="row-even"><td>ssh101</td>
+<tr class="row-odd"><td>ssh101</td>
 <td>ssh101.com</td>
 <td>Yes</td>
 <td>No</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>streamingvi... <a class="footnote-reference" href="#id5" id="id3">[1]</a></td>
+<tr class="row-even"><td>streamingvi... <a class="footnote-reference" href="#id5" id="id3">[1]</a></td>
 <td>streamingvid... <a class="footnote-reference" href="#id6" id="id4">[2]</a></td>
 <td>Yes</td>
 <td>&#8211;</td>
 <td>RTMP streams requires rtmpdump with
 K-S-V patches.</td>
 </tr>
-<tr class="row-even"><td>streamlive</td>
+<tr class="row-odd"><td>streamlive</td>
 <td>streamlive.to</td>
 <td>Yes</td>
 <td>&#8211;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>streamme</td>
+<tr class="row-even"><td>streamme</td>
 <td>stream.me</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>streamupcom</td>
+<tr class="row-odd"><td>streamupcom</td>
 <td>streamup.com</td>
 <td>Yes</td>
 <td>&#8211;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>svtplay</td>
+<tr class="row-even"><td>svtplay</td>
 <td><ul class="first last simple">
 <li>svtplay.se</li>
 <li>svtflow.se</li>
@@ -559,7 +565,7 @@ K-S-V patches.</td>
 <td>Yes</td>
 <td>Streams may be geo-restricted to Sweden.</td>
 </tr>
-<tr class="row-even"><td>tga</td>
+<tr class="row-odd"><td>tga</td>
 <td><ul class="first last simple">
 <li>star.plu.cn</li>
 <li>star.tga.plu.cn</li>
@@ -569,13 +575,13 @@ K-S-V patches.</td>
 <td>No</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>tv3cat</td>
+<tr class="row-even"><td>tv3cat</td>
 <td>tv3.cat</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>Streams may be geo-restricted to Spain.</td>
 </tr>
-<tr class="row-even"><td>tv4play</td>
+<tr class="row-odd"><td>tv4play</td>
 <td><ul class="first last simple">
 <li>tv4play.se</li>
 <li>fotbollskanalen.se</li>
@@ -586,7 +592,7 @@ K-S-V patches.</td>
 <td>Streams may be geo-restricted to Sweden.
 Only non-premium streams currently supported.</td>
 </tr>
-<tr class="row-odd"><td>tvcatchup</td>
+<tr class="row-even"><td>tvcatchup</td>
 <td><ul class="first last simple">
 <li>tvcatchup.com</li>
 </ul>
@@ -595,26 +601,26 @@ Only non-premium streams currently supported.</td>
 <td>No</td>
 <td>Streams may be geo-restricted to Great Britain.</td>
 </tr>
-<tr class="row-even"><td>tvplayer</td>
+<tr class="row-odd"><td>tvplayer</td>
 <td>tvplayer.com</td>
 <td>Yes</td>
 <td>No</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>twitch</td>
+<tr class="row-even"><td>twitch</td>
 <td>twitch.tv</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>Possible to authenticate for access to
 subscription streams.</td>
 </tr>
-<tr class="row-even"><td>ustreamtv</td>
+<tr class="row-odd"><td>ustreamtv</td>
 <td>ustream.tv</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>vaughnlive</td>
+<tr class="row-even"><td>vaughnlive</td>
 <td><ul class="first last simple">
 <li>vaughnlive.tv</li>
 <li>breakers.tv</li>
@@ -626,25 +632,25 @@ subscription streams.</td>
 <td>&#8211;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>veetle</td>
+<tr class="row-odd"><td>veetle</td>
 <td>veetle.com</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>vgtv</td>
+<tr class="row-even"><td>vgtv</td>
 <td>vgtv.no</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>viagame</td>
+<tr class="row-odd"><td>viagame</td>
 <td>viagame.com</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>viasat</td>
+<tr class="row-even"><td>viasat</td>
 <td><ul class="first last simple">
 <li>tv3play.se</li>
 <li>tv3play.no</li>
@@ -665,25 +671,25 @@ subscription streams.</td>
 <td>Yes</td>
 <td>Streams may be geo-restricted.</td>
 </tr>
-<tr class="row-even"><td>vidio</td>
+<tr class="row-odd"><td>vidio</td>
 <td>vidio.com</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>wattv</td>
+<tr class="row-even"><td>wattv</td>
 <td>wat.tv</td>
 <td>&#8211;</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>weeb</td>
+<tr class="row-odd"><td>weeb</td>
 <td>weeb.tv</td>
 <td>Yes</td>
 <td>&#8211;</td>
 <td>Requires rtmpdump with K-S-V patches.</td>
 </tr>
-<tr class="row-odd"><td>youtube</td>
+<tr class="row-even"><td>youtube</td>
 <td><ul class="first last simple">
 <li>youtube.com</li>
 <li>youtu.be</li>
@@ -693,7 +699,7 @@ subscription streams.</td>
 <td>Yes</td>
 <td>Protected videos are not supported.</td>
 </tr>
-<tr class="row-even"><td>zdf_mediathek</td>
+<tr class="row-odd"><td>zdf_mediathek</td>
 <td>zdf.de</td>
 <td>Yes</td>
 <td>Yes</td>
