--- a/plugin_matrix.html
+++ b/plugin_matrix.html
@@ -614,13 +614,19 @@ Only non-premium streams currently supported.</td>
 <td>Possible to authenticate for access to
 subscription streams.</td>
 </tr>
-<tr class="row-odd"><td>ustreamtv</td>
+<tr class="row-odd"><td>useetv</td>
+<td>useetv.com</td>
+<td>Yes</td>
+<td>No</td>
+<td>Streams may be geo-restricted to Indonesia.</td>
+</tr>
+<tr class="row-even"><td>ustreamtv</td>
 <td>ustream.tv</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>vaughnlive</td>
+<tr class="row-odd"><td>vaughnlive</td>
 <td><ul class="first last simple">
 <li>vaughnlive.tv</li>
 <li>breakers.tv</li>
@@ -632,25 +638,25 @@ subscription streams.</td>
 <td>&#8211;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>veetle</td>
+<tr class="row-even"><td>veetle</td>
 <td>veetle.com</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>vgtv</td>
+<tr class="row-odd"><td>vgtv</td>
 <td>vgtv.no</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>viagame</td>
+<tr class="row-even"><td>viagame</td>
 <td>viagame.com</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>viasat</td>
+<tr class="row-odd"><td>viasat</td>
 <td><ul class="first last simple">
 <li>tv3play.se</li>
 <li>tv3play.no</li>
@@ -671,25 +677,25 @@ subscription streams.</td>
 <td>Yes</td>
 <td>Streams may be geo-restricted.</td>
 </tr>
-<tr class="row-odd"><td>vidio</td>
+<tr class="row-even"><td>vidio</td>
 <td>vidio.com</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>wattv</td>
+<tr class="row-odd"><td>wattv</td>
 <td>wat.tv</td>
 <td>&#8211;</td>
 <td>Yes</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>weeb</td>
+<tr class="row-even"><td>weeb</td>
 <td>weeb.tv</td>
 <td>Yes</td>
 <td>&#8211;</td>
 <td>Requires rtmpdump with K-S-V patches.</td>
 </tr>
-<tr class="row-even"><td>youtube</td>
+<tr class="row-odd"><td>youtube</td>
 <td><ul class="first last simple">
 <li>youtube.com</li>
 <li>youtu.be</li>
@@ -699,7 +705,7 @@ subscription streams.</td>
 <td>Yes</td>
 <td>Protected videos are not supported.</td>
 </tr>
-<tr class="row-odd"><td>zdf_mediathek</td>
+<tr class="row-even"><td>zdf_mediathek</td>
 <td>zdf.de</td>
 <td>Yes</td>
 <td>Yes</td>
