--- a/plugin_matrix.html
+++ b/plugin_matrix.html
@@ -624,7 +624,8 @@ subscription streams.</td>
 <td>useetv.com</td>
 <td>Yes</td>
 <td>No</td>
-<td>Streams may be geo-restricted to Indonesia.</td>
+<td>Streams may be geo-restricted to Indonesia
+or subscription only.</td>
 </tr>
 <tr class="row-odd"><td>ustreamtv</td>
 <td>ustream.tv</td>
